fix hover on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -101,14 +101,14 @@ body {
     padding: 1rem;
     text-decoration: none;
     color: inherit; }
-    .text-tertiary--1:hover, .text-tertiary--1:active {
+    .text-tertiary--1:hover {
       background-color: #2c3e50;
       color: #ecf0f1; }
   .text-tertiary--2 {
     padding: 1rem;
     text-decoration: none;
     color: inherit; }
-    .text-tertiary--2:hover, .text-tertiary--2:active {
+    .text-tertiary--2:hover {
       background-color: #2c3e50;
       color: #ecf0f1; }
 
